deps/v8/test/message/fail/destructuring-undefined-number-property.out
*%(basename)s:5: TypeError: Cannot destructure 'undefined' or 'null'.
var { 1: x } = undefined;
    ^
TypeError: Cannot destructure 'undefined' or 'null'.
    at *%(basename)s:5:5
